# simple_cpp

./: CMakeLists.txt  README.md
examples/: hello_world.cpp
src/include/: utils.h
